--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.10.1",
     "react-router-dom": "^6.14.0",
+    "react-spinners": "^0.13.8",
+    "react-typical": "^0.1.3",
     "sort-by": "^1.2.0"
   },
   "devDependencies": {
