--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.10.1",
+    "react-reveal": "^1.2.2",
     "react-router-dom": "^6.14.0",
     "react-spinners": "^0.13.8",
     "react-typical": "^0.1.3",
