--- a/package.json
+++ b/package.json
@@ -18,8 +18,12 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.10.1",
+    "react-image-magnifiers": "^1.4.0",
+    "react-image-magnify": "^2.7.4",
     "react-reveal": "^1.2.2",
     "react-router-dom": "^6.14.0",
+    "react-router-hash-link": "^2.4.3",
+    "react-scroll": "^1.8.9",
     "react-spinners": "^0.13.8",
     "react-typical": "^0.1.3",
     "sort-by": "^1.2.0"
