--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "animate.css": "^4.1.1",
     "aos": "^2.3.4",
+    "clipboard-copy": "^4.0.1",
     "localforage": "^1.10.0",
     "lottie-react": "^2.4.0",
     "match-sorter": "^6.3.1",
@@ -25,8 +26,10 @@
     "react-router-hash-link": "^2.4.3",
     "react-scroll": "^1.8.9",
     "react-spinners": "^0.13.8",
+    "react-toastify": "^9.1.3",
     "react-typical": "^0.1.3",
-    "sort-by": "^1.2.0"
+    "sort-by": "^1.2.0",
+    "sweetalert2": "^11.7.12"
   },
   "devDependencies": {
     "@types/react": "^18.0.37",
